--- a/Project-06 (Real Estate Business Website)/assets/scss/layout/about-page-layouts/_achievments.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/layout/about-page-layouts/_achievments.scss
@@ -1,6 +1,5 @@
-.faq{
-    padding: 150px 0px 75px;
-    background-color: $grey-color-08;
+.achievements{
+    padding: 75px 0px;
 
     .container{
         display: flex;
