--- a/Project-06 (Real Estate Business Website)/assets/scss/layout/_footer.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/layout/_footer.scss
@@ -24,6 +24,7 @@ footer{
                     justify-content: space-between;
 
                     input{
+                        color: #fff;
                         width: 425px;
                         padding: 18px 24px 18px 58px;
                         background-color: $grey-color-08;
