--- a/Project-06 (Real Estate Business Website)/assets/scss/layout/_hero.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/layout/_hero.scss
@@ -1,4 +1,4 @@
-.hero{
+#hero{
     position: relative;
     width: 100%;
     background-color: $grey-color-08;
@@ -7,6 +7,7 @@
 
     .container{
         display: flex;
+        align-items: center;
         gap: 80px;
         
         .hero-left{
