Properties section stared

--- a/Project-06 (Real Estate Business Website)/assets/css/main.css
+++ b/Project-06 (Real Estate Business Website)/assets/css/main.css
@@ -974,4 +974,12 @@ footer .end .container .right .social-icon {
 #about {
   height: auto;
   background-color: #141414;
+}
+
+#properties {
+  height: auto;
+  background-color: #141414;
+}
+#properties section {
+  padding: 150px;
 }/*# sourceMappingURL=main.css.map */
